--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body{
 	margin:0px;
 	padding:0px;
-	font-family: 'refrigerator-deluxe', cursive;
+	font-family: Helvetica, Arial, sans-serif ;
 	text-align:center;
 	font-size: 1.2em;
 }
